<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">주소록</string>
    <string name="name">이름</string>
    <string name="phonenumber">전화번호</string>
    <string name="year">학년</string>
    <string name="major">전공</string>
    <string name="company">회사</string>
    <string name="input">추가</string>
    <string name="search">검색</string>
    <string name="delete">삭제</string>
    <string name="print">출력</string>
</resources>
