<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input"
                android:id="@+id/input"
                android:onClick="popupMenu"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/delete"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print"
                android:id="@+id/print"
                />
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/nomalinput"
                android:visibility="invisible"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nomalname"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phonenumber"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nomalphone"
                        android:numeric="integer"
                        />
            </LinearLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input"
                    android:id="@+id/nomalbtn"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/univinput"
                android:visibility="invisible"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/univname"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/univyear"
                        android:numeric="integer"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/major"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/univmajor"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phonenumber"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/univphone"
                        android:numeric="integer"
                        />
            </LinearLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input"
                    android:id="@+id/unvibtn"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/companyinput"
                android:visibility="invisible"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/companyname"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/company"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phonenumber"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/companyphone"
                        android:numeric="integer"
                        />
            </LinearLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input"
                    android:id="@+id/companybtn"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchlayout"
                android:orientation="vertical"
                android:visibility="invisible"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchname"
                        />
            </LinearLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:id="@+id/searchbutton"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deletelayout"
                android:orientation="vertical"
                android:visibility="invisible"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/textsize"
                        />
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/deletename"
                        />
            </LinearLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:id="@+id/deletebutton"
                    />
        </LinearLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scroll"
                >
        </ScrollView>
    </FrameLayout>
</LinearLayout>